@@ -30,6 +30,7 @@ package com.qubit.solution.fenixedu.integration.cgd.domain;
 class configuration.CgdIntegrationConfiguration {
 	String memberIDResolverClass;
 	String addressProofGeneratorClass;
+	String iesCodeProviderStrategyClass;
 }
 
 relation CgdIntegrationConfigurationRootDomainObject {
