@@ -1,0 +1,6 @@
+package com.qubit.solution.fenixedu.integration.cgd.services.utils;
+
+public interface CgdIESCodeProviderStrategyClass {
+
+    public String getIESCode();
+}
