@@ -1,3 +1,5 @@
+- Improvement: Adds strategy to provide IES code
+
 2.7.3 (15-07-2022)
 - Refactor: Add font required to fill CGD form
 
